@@ -7,6 +7,7 @@
 #include "tao/RTCORBA/RTCORBA.h"
 #include "ace/Log_Msg.h"
 #include "ace/Thread.h"
+#include "ace/Get_Opt.h"
 
 #include "TestC.h"
 
@@ -23,15 +24,49 @@ void shutdownORB(CORBA::ORB_ptr orb, const char * orbid)
               orbid));
 }
 
+static const ACE_TCHAR *orbidAfile = ACE_TEXT("file://iorA.ior");
+static const ACE_TCHAR *orbidBfile = ACE_TEXT("file://iorB.ior");
+
+int
+parse_args (int argc, ACE_TCHAR *argv[])
+{
+  ACE_Get_Opt get_opts (argc, argv, ACE_TEXT("a:b:"));
+  int c;
+
+  while ((c = get_opts ()) != -1)
+    switch (c)
+      {
+        case 'a':
+          orbidAfile = get_opts.optarg;
+        break;
+        case 'b':
+          orbidBfile = get_opts.optarg;
+        break;
+        case '?':
+        default:
+          ACE_ERROR_RETURN ((LM_ERROR,
+                           "usage:  %s "
+                           "-a <iorA> "
+                           "-a <iorB> "
+                           "\n",
+                           argv [0]),
+                          -1);
+      }
+  // Indicates sucessful parsing of the command line
+  return 0;
+}
+
 int
 ACE_TMAIN (int argc, ACE_TCHAR *argv[])
 {
   try
   {
-    const char *orbidA = "orbidA";
-    const char *orbidAfile = "file://iorA.ior";
-    const char *orbidBfile = "file://iorB.ior";
+    if (parse_args (argc, argv) != 0)
+      {
+        return 1;
+      }
 
+    const char *orbidA = "orbidA";
     CORBA::ORB_var orbA = CORBA::ORB_init(argc, argv, orbidA);
 
     CORBA::Object_var objA = orbA->string_to_object(orbidAfile);
